[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyg_multiagent"
version = "0.0.1"
authors = [
  { name="Chenning Yu", email="rainorangelemon@gmail.com" },
]
description = "Python Package for Multi-Agent Learning"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/rainorangelemon/pygma"
"Bug Tracker" = "https://github.com/rainorangelemon/pygma/issues"